Homelabing/Ingress-page/reference-manifests/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: hermitden-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - gitea.hermitden
      secretName: gitea-tls-secret
  rules:
    - host: gitea.hermitden
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-service
                port:
                  number: 3000
