Homelabing/Ingress-page/reference-manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: hermitden-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prometheus.hermitden
      secretName: prometheus-tls-secret
  rules:
    - host: prometheus.hermitden
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
